# miodj2

./: .gitignore  README.rst  build.gradle  settings.gradle  todo.rst
cbackend/: CMakeLists.txt  miod_builtins.h
cbackend/builtins_usage/: CMakeLists.txt
cbackend/builtins_usage/src/: CMakeLists.txt  hello.c
cbackend/builtins_usage2/: CMakeLists.txt
cbackend/builtins_usage2/src/: CMakeLists.txt
cbackend/jgen/: build.gradle  settings.gradle
cbackend/jgen/src/main/java/jgen/: App.java  ClassDef.java  ProcDef.java  UnitDef.java
cbackend/jgen/src/main/resources/jgen/: cout.stg
cbackend/jgen/src/test/java/jgen/: AppTest.java
cbackend/miod_builtins/: CMakeLists.txt  TODO.txt
cbackend/miod_builtins/examples/: CMakeLists.txt  main.c
cbackend/miod_builtins/scripts/: gen_class.py  gen_common.py  gen_enum.py
cbackend/miod_builtins/scripts/private/: gen_ast.py  gen_text.py
cbackend/miod_builtins/src/: CMakeLists.txt  miod_builtins.c
cbackend/miod_builtins/src/include/miod_builtins/: miod_builtins.h
cbackend/miod_builtins/test/: CMakeLists.txt  miod_builtins_tests.c
cbackend/tests/: miod_builtins_tests.c
cmake_gen/: CMakeLists.txt  gen.sh  gen_src.sh  hello_src.c  sources.txt
cmake_helpers/: CMakeLists.txt  fake_compiler.cmake  feature_a.miod  feature_b.miod  miod_support.cmake
cmake_helpers/mod/: feature_a.miod
docs/: lang.rst  lang_sample.txt  roadmap.rst
jg-projects/: settings.gradle
jg-projects/miod-parser/src/main/java/org/miod/ast/: Comment.java  ConstDecl.java
jg-projects/miod-parser/src/main/java/org/miod/compiler/: BuildContext.java  BuildContextImpl.java  FrontendImpl.java  SemanticResult.java
jg-projects/miod-parser/src/main/java/org/miod/compiler/errors/: WriteError.java  WrongUnitName.java
jg-projects/miod-parser/src/main/java/org/miod/parser/: ParserUtils.java  ParsingErrorListener.java
jg-projects/miod-parser/src/main/java/org/miod/semantic/: PackageContext.java  ScopeView.java
jg-projects/miod_parser/src/main/java/org/miod/ast/: AstNode.java  CompUnit.java  ExprNode.java  NodeLocation.java
jg-projects/miod_parser/src/main/java/org/miod/compiler/: ParseResult.java
jg-projects/miod_parser/src/main/java/org/miod/compiler/errors/: CyclicDependency.java  ReadError.java  SyntaxError.java
jg-projects/miod_parser/src/main/java/org/miod/semantic/: Symbol.java
jg-projects/miod_parser/src/test/resources/pkgns/: t2.miod
miod_parser/: build.gradle
miod_parser/src/main/java/miod_parser/: Library.java
miod_parser/src/main/java/org/miod/ast/: AstNode.java  BaseAstNode.java  Comment.java  CompUnit.java  Doc.java  IntegerTypeDecl.java  NodeLocation.java  TypeDecl.java
miod_parser/src/main/java/org/miod/ast/builtins/: IntegerTypeDecl.java
miod_parser/src/main/java/org/miod/compiler/: Analyzer.java  BuildContext.java  BuildContextImpl.java  Frontend.java  FrontendImpl.java  ParseResult.java  SemanticResult.java  SemanticResults.java
miod_parser/src/main/java/org/miod/compiler/errors/: CompilationError.java  CyclicDependency.java  ReadError.java  UnitNotFound.java  WriteError.java
miod_parser/src/main/java/org/miod/parser/: AstBuilder.java  ParserUtils.java  ParsingErrorListener.java
miod_parser/src/main/java/org/miod/semantic/: PackageContext.java  Symbol.java  UnitContext.java  UnitResolver.java
miod_parser/src/test/java/miod_parser/: LibraryTest.java  ParsingTests.java  TestUtils.java
miod_parser/src/test/resources/: t1.miod
